--- a/style.css
+++ b/style.css
@@ -1,10 +1,22 @@
-
+#timer {
+    display: flex;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
 .digit {
-    border: 1px solid rgb(197, 197, 197);
+    margin: 10px;
     width: 100px;
     height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
-    
+    box-shadow: 
+    0px 0px 8px rgba(0, 0, 0, 0.2), inset 0 -8px 27px rgba(0, 0, 0, 0.068);    
+    border-radius: 10px;
+}
+
+.timer__title {
+    font-size: 13px;
+    text-align: center;
+    color: rgb(92, 92, 92);
+    font-weight: 700;
 }
